sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: value c
  while (!c==0) {
          ^AlgBubbleSort1:4: error: not found: value c
    c=0
    ^AlgBubbleSort1:7: error: not found: value c
        c=1
        ^AlgBubbleSort1:8: error: not found: value p
        p=getValeur(i:Int)
        ^AlgBubbleSort1:9: error: missing arguments for method getValeur in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
        getValeur(i:Int)=getValeur((i+1):Int)
        ^AlgBubbleSort1:10: error: missing arguments for method getValeur in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
        getValeur((i+1):Int)=p
        ^AlgBubbleSort1:10: error: not found: value p
        getValeur((i+1):Int)=p
                             ^